--- a/docs/project.css
+++ b/docs/project.css
@@ -1,6 +1,6 @@
 body{
     font-family: 'Sansita', sans-serif;
-    background-color: #011627;
+    background-color: #FFFFFF;
     color: #FDFFFC;
     text-align: center;
     border: 40px solid #2EC486;
