--- a/main.css
+++ b/main.css
@@ -1,16 +1,12 @@
-html, body, 
-
-.container {
-    height: 50%;
-}
-.container {
-    position: relative;
-    text-align: center;
-}
-.container > p {
+div {
+    width: 100px;
+    height: 100px;
+    
     position: absolute;
-    top: 50%;
+    top:0;
+    bottom: 0;
     left: 0;
     right: 0;
-    margin-top: 0px;
+    
+    margin: auto;
 }
