--- a/CSS/partical.css
+++ b/CSS/partical.css
@@ -2,7 +2,7 @@
     position:fixed;
     width: 100%; 
     height: 100%; 
-    background-color: #1f1c1d; 
+    background-color: #ffffff; 
     background-image: url("");
     background-repeat: repeat;
     background-size: cover; 
